ark/docs/src/styles.css
@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,500,700&display=swap");
@import url("https://fonts.cdnfonts.com/css/cascadia-code");

@font-face {
	font-family: "Cascadia Code";
	src: url("./assets/CascadiaCodeLig.ttf") format("truetype");
	font-style: italic;
}

:root {
	/* General */
	--shadow: rgba(0, 0, 0, 0.2) 0px 11px 15px -7px,
		rgba(0, 0, 0, 0.14) 0px 24px 38px 3px, rgba(0, 0, 0, 0.12) 0px 9px 46px 8px;
	/* Fonts */
	--sl-font: Raleway, sans-serif;
	--sl-font-mono: Cascadia Code;
	/* Dark mode colors. */
	--sl-color-accent-low: #4b3621;
	--sl-color-accent: #eb9f2e;
	--sl-color-accent-high: #f5cf8f;
	--sl-color-white: #fffff0;
	--sl-color-gray-1: #e0f0ff;
	--sl-color-gray-2: #a4c6e5;
	--sl-color-gray-3: #4b91cc;
	--sl-color-gray-4: #0a5c93;
	--sl-color-gray-5: #003b62;
	--sl-color-gray-6: #002946;
	--sl-color-black: #001a2f;
	/** @shikijs/twoslash/style-rich.css overrides */
	--twoslash-border-color: #ba7e4127;
	--twoslash-underline-color: currentColor;
	--twoslash-highlighted-border: #c37d0d50;
	--twoslash-highlighted-bg: #c37d0d20;
	/* Semi-transparent white */
	/* background: rgba(255, 255, 255, 0.1); */
	--twoslash-popup-bg: transparent;
	--twoslash-popup-color: inherit;
	--twoslash-popup-shadow: var(--shadow);
	--twoslash-docs-color: #888;
	--twoslash-docs-font: sans-serif;
	--twoslash-code-font: inherit;
	--twoslash-code-font-size: 1em;
	--twoslash-matched-color: inherit;
	--twoslash-unmatched-color: #888;
	--twoslash-cursor-color: #8888;
	--twoslash-error-color: #d45656;
	--twoslash-error-bg: #d4565620;
	--twoslash-warn-color: #c37d0d;
	--twoslash-warn-bg: #c37d0d20;
	--twoslash-tag-color: #3772cf;
	--twoslash-tag-bg: #3772cf20;
	--twoslash-tag-warn-color: var(--twoslash-warn-color);
	--twoslash-tag-warn-bg: var(--twoslash-warn-bg);
	--twoslash-tag-annotate-color: #1ba673;
	--twoslash-tag-annotate-bg: #1ba67320;
}

/* Light mode colors. */
:root[data-theme="light"] {
	--sl-color-accent-low: #f5cf8f;
	--sl-color-accent: #eb9f2e;
	--sl-color-accent-high: #4b3621;
	--sl-color-white: #001a2f;
	--sl-color-gray-1: #002946;
	--sl-color-gray-2: #003b62;
	--sl-color-gray-3: #0a5c93;
	--sl-color-gray-4: #4b91cc;
	--sl-color-gray-5: #a4c6e5;
	--sl-color-gray-6: #e0f0ff;
	--sl-color-gray-7: #eff7ff;
	--sl-color-black: #fffff0;
}

pre.astro-code {
	border-radius: 1rem;
	border-color: #ba7e4127;
	border-width: 1px;
}

header {
	backdrop-filter: blur(8px);
	box-shadow: var(--shadow);
}

.header {
	background-color: transparent;
}

/** Hide theme picker since light mode is not currently supported */
starlight-theme-select,
.social-icons::after {
	display: none;
}

.twoslash .twoslash-hover:hover .twoslash-popup-container {
	border-radius: 1rem;
	opacity: 1;
	backdrop-filter: blur(10px);
	border: 1px solid rgba(255, 255, 255, 0.2);
	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
}

h1 {
	font-weight: 400;
}

header * {
	/* Ensure navbar items are in front of boat animation but slightly transparent */
	z-index: 12;
}

@media (max-width: 799px) {
	.hero {
		padding-top: 8rem;
	}

	.hero img {
		display: none;
	}
}

@media (min-width: 800px) {
	.hero {
		margin-top: -3rem;
		margin-bottom: -8rem;
	}
}

